--- a/index.html
+++ b/index.html
@@ -30,20 +30,6 @@
 
 <br>
 
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px; display: flex; justify-content: center; align-items: center;" id="home">
-  <!-- <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-  </div> -->
-
-  <!-- Embedded Map: -->
-  <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" oallowfullscreen="" msallowfullscreen="" width="1500" height="800" onload="this.style.display='block';"></iframe>
-  
-  <!-- Popup Map: -->
-  <!-- <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/e80e579e-7c0a-11ef-89ac-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div> -->
-</header>
-
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
@@ -105,6 +91,24 @@
       </div>
     </div>
   </div>
+
+  <!-- Locations -->
+   
+   <div class="w3-container w3-padding" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Locations</h3>
+    </div>
+    <div class="w3-content w3-padding-32" style="max-width:1500px; display: flex; justify-content: center; align-items: center;" id="home">
+    <!-- <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+    <div class="w3-display-middle w3-margin-top w3-center">
+      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+    </div> -->
+  
+    <!-- Embedded Map: -->
+    <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" oallowfullscreen="" msallowfullscreen="" width="1500" height="800" onload="this.style.display='block';"></iframe>
+    
+    <!-- Popup Map: -->
+    <!-- <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/e80e579e-7c0a-11ef-89ac-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div> -->
+    </div>
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
