--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="./w3images/architect.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
   </div>
@@ -42,25 +42,25 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+        <img src="./w3images/house5.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+        <img src="./w3images/house2.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
+        <img src="./w3images/house3.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
+        <img src="./w3images/house4.jpg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
@@ -69,25 +69,25 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
+        <img src="./w3images/house2.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
+        <img src="./w3images/house5.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
+        <img src="./w3images/house4.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
+        <img src="./w3images/house3.jpg" alt="House" style="width:99%">
       </div>
     </div>
   </div>
@@ -98,16 +98,13 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Locations</h3>
     </div>
     <div class="w3-content w3-padding-32" style="max-width:1500px; display: flex; justify-content: center; align-items: center;" id="home">
-    <!-- <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+    <!-- <img class="w3-image" src="./w3images/architect.jpg" alt="Architecture" width="1500" height="800">
     <div class="w3-display-middle w3-margin-top w3-center">
       <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
     </div> -->
   
     <!-- Embedded Map: -->
-    <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" oallowfullscreen="" msallowfullscreen="" width="1500" height="800" onload="this.style.display='block';"></iframe>
-    
-    <!-- Popup Map: -->
-    <!-- <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/e80e579e-7c0a-11ef-89ac-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div> -->
+    <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" oallowfullscreen="" msallowfullscreen="" width="1500" height="800" onload="this.style.display='block';"></iframe><!-- <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/e80e579e-7c0a-11ef-89ac-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div> -->
     </div>
 
   <!-- About Section -->
@@ -121,28 +118,28 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+      <img src="./w3images/team2.jpg" alt="John" style="width:100%">
       <h3>John Doe</h3>
       <p class="w3-opacity">CEO & Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+      <img src="./w3images/team1.jpg" alt="Jane" style="width:100%">
       <h3>Jane Doe</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+      <img src="./w3images/team3.jpg" alt="Mike" style="width:100%">
       <h3>Mike Ross</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
+      <img src="./w3images/team4.jpg" alt="Dan" style="width:100%">
       <h3>Dan Star</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -154,21 +151,26 @@
   <div class="w3-container w3-padding-32" id="contact">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
     <p>Lets get in touch and talk about your next project.</p>
-    <form action="/action_page.php" target="_blank">
-      <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
-      <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
-      <button class="w3-button w3-black w3-section" type="submit">
-        <i class="fa fa-paper-plane"></i> SEND MESSAGE
-      </button>
-    </form>
-  </div>
+    <div class="w3-col 26 m6 w3-margin-bottom">
+      <form action="/action_page.php" target="_blank">
+        <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
+        <button class="w3-button w3-black w3-section" type="submit">
+          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </form>
+    </div>
+    <!-- Popup Map: -->
+    <div class="w3-col 26 m6 w3-margin-bottom" style="display: flex; justify-content: center;">
+      <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div></div>
+    </div>
   
 <!-- Image of location/map -->
-<div class="w3-container">
-  <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
-</div>
+<!-- <div class="w3-container">
+  <img src="./w3images/map.jpg" class="w3-image" style="width:100%">
+</div> -->
 
 <!-- End page content -->
 </div>
