--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <title>W3.CSS Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- Omnivore plugin for KML -->
+  <script src="https://unpkg.com/leaflet-omnivore@0.3.4/leaflet-omnivore.min.js"></script>
+  <!-- PapaParse for CSV parsing -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
 
@@ -12,7 +21,6 @@
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
-    <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#projects" class="w3-bar-item w3-button">Projects</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
@@ -24,7 +32,10 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="./w3images/architect.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+    <h1 class="w3-xxlarge w3-text-white">
+      <span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span>
+      <span class="w3-hide-small w3-text-light-grey">Architects</span>
+    </h1>
   </div>
 </header>
 
@@ -38,148 +49,80 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
   </div>
 
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="./w3images/house5.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="./w3images/house2.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="./w3images/house3.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="./w3images/house4.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-  </div>
+  <!-- ... existing project grids ... -->
 
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="./w3images/house2.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="./w3images/house5.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="./w3images/house4.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="./w3images/house3.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-  </div>
-
-  <!-- Locations -->
-   
-   <div class="w3-container w3-padding" id="projects">
+  <!-- Locations Section -->
+  <div class="w3-container w3-padding" id="locations">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Locations</h3>
+  </div>
+
+  <!-- Embedded MangoMap iframe (optional) -->
+  <div class="w3-content w3-padding-32" style="max-width:1500px; display: flex; justify-content: center; align-items: center;" id="home">
+    <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="1500" height="800" onload="this.style.display='block';"></iframe>
+  </div>
+
+  <!-- New Leaflet Map Section -->
+  <div class="w3-container w3-padding-32" id="map-section">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">California Map</h3>
+    <div style="display: flex; gap: 1rem;">
+      <!-- Sidebar -->
+      <div id="sidebar" style="width: 30%; min-width: 200px; max-height: 500px; overflow-y: auto; border: 1px solid #ccc; padding: 0.5rem;">
+        <p><em>Click a marker on the map → its name will go here.</em></p>
+      </div>
+      <!-- Map -->
+      <div id="map" style="width: 70%; height: 500px; border: 1px solid #ccc;"></div>
     </div>
-    <div class="w3-content w3-padding-32" style="max-width:1500px; display: flex; justify-content: center; align-items: center;" id="home">
-    <!-- <img class="w3-image" src="./w3images/architect.jpg" alt="Architecture" width="1500" height="800">
-    <div class="w3-display-middle w3-margin-top w3-center">
-      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
-    </div> -->
-  
-    <!-- Embedded Map: -->
-    <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" oallowfullscreen="" msallowfullscreen="" width="1500" height="800" onload="this.style.display='block';"></iframe><!-- <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/e80e579e-7c0a-11ef-89ac-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/e80e579e-7c0a-11ef-89ac-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div> -->
-    </div>
+  </div>
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
   </div>
 
-  <div class="w3-row-padding w3-grayscale">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./w3images/team2.jpg" alt="John" style="width:100%">
-      <h3>John Doe</h3>
-      <p class="w3-opacity">CEO & Founder</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./w3images/team1.jpg" alt="Jane" style="width:100%">
-      <h3>Jane Doe</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./w3images/team3.jpg" alt="Mike" style="width:100%">
-      <h3>Mike Ross</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./w3images/team4.jpg" alt="Dan" style="width:100%">
-      <h3>Dan Star</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-  </div>
+  <!-- ... team, contact, etc. ... -->
 
-  <!-- Contact Section -->
-  <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>Lets get in touch and talk about your next project.</p>
-    <div class="w3-col 26 m6 w3-margin-bottom">
-      <form action="/action_page.php" target="_blank">
-        <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-        <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
-        <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
-        <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
-        <button class="w3-button w3-black w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </form>
-    </div>
-    <!-- Popup Map: -->
-    <div class="w3-col 26 m6 w3-margin-bottom" style="display: flex; justify-content: center;">
-      <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div></div>
-    </div>
-  
-<!-- Image of location/map -->
-<!-- <div class="w3-container">
-  <img src="./w3images/map.jpg" class="w3-image" style="width:100%">
-</div> -->
-
-<!-- End page content -->
-</div>
-
+</div> <!-- end page content -->
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
+
+<!-- Leaflet Initialization Script -->
+<script>
+  // 1) Initialize map centered on California
+  const map = L.map('map').setView([37.5, -119.5], 6);
+
+  // 2) Add OpenStreetMap tile layer
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; OpenStreetMap contributors'
+  }).addTo(map);
+
+  // 3) Load KML borders (adjust path)
+  omnivore.kml('/borders.kml')
+    .on('ready', function() {
+      this.addTo(map);
+      map.fitBounds(this.getBounds());
+    });
+
+  // 4) Load CSV points and add markers
+  fetch('/points.csv')
+    .then(res => res.text())
+    .then(text => Papa.parse(text, { header: true }).data)
+    .then(rows => {
+      rows.forEach(row => {
+        if (!row.LAT || !row.LON) return;
+        const marker = L.marker([+row.LAT, +row.LON]).addTo(map)
+          .bindPopup(row['Organization Name_CLEAN']);
+        marker.on('click', () => {
+          document.getElementById('sidebar').innerHTML = 
+            `<h4>${row['Organization Name_CLEAN']}</h4><p>${row.Address}</p>`;
+        });
+      });
+    })
+    .catch(console.error);
+</script>
 
 </body>
 </html>
