--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <!-- MarkerCluster CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
+  <!-- Leaflet Search CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.css" />
+
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- MarkerCluster JS -->
+  <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <!-- Omnivore plugin for KML -->
   <script src="https://unpkg.com/leaflet-omnivore@0.3.4/leaflet-omnivore.min.js"></script>
   <!-- PapaParse for CSV parsing -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <!-- Leaflet Search JS -->
+  <script src="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.js"></script>
 </head>
 <body>
 
@@ -41,7 +51,6 @@
 
 <br>
 
-<!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
   <!-- Project Section -->
@@ -49,21 +58,71 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
   </div>
 
-  <!-- ... existing project grids ... -->
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
+        <img src="./w3images/house5.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
+        <img src="./w3images/house2.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
+        <img src="./w3images/house3.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
+        <img src="./w3images/house4.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
+        <img src="./w3images/house2.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
+        <img src="./w3images/house5.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
+        <img src="./w3images/house4.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
+        <img src="./w3images/house3.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+  </div>
 
   <!-- Locations Section -->
   <div class="w3-container w3-padding" id="locations">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Locations</h3>
   </div>
-
-  <!-- Embedded MangoMap iframe (optional) -->
-  <div class="w3-content w3-padding-32" style="max-width:1500px; display: flex; justify-content: center; align-items: center;" id="home">
+  <div class="w3-content w3-padding-32" style="max-width:1500px; display: flex; justify-content: center; align-items: center;">
     <iframe style="display: none;" src="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="1500" height="800" onload="this.style.display='block';"></iframe>
   </div>
 
   <!-- New Leaflet Map Section -->
   <div class="w3-container w3-padding-32" id="map-section">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">California Map</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Leaflet Map</h3>
     <div style="display: flex; gap: 1rem;">
       <!-- Sidebar -->
       <div id="sidebar" style="width: 30%; min-width: 200px; max-height: 500px; overflow-y: auto; border: 1px solid #ccc; padding: 0.5rem;">
@@ -80,7 +139,56 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
   </div>
 
-  <!-- ... team, contact, etc. ... -->
+  <div class="w3-row-padding w3-grayscale">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="./w3images/team2.jpg" alt="John" style="width:100%">
+      <h3>John Doe</h3>
+      <p class="w3-opacity">CEO & Founder</p>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="./w3images/team1.jpg" alt="Jane" style="width:100%">
+      <h3>Jane Doe</h3>
+      <p class="w3-opacity">Architect</p>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="./w3images/team3.jpg" alt="Mike" style="width:100%">
+      <h3>Mike Ross</h3>
+      <p class="w3-opacity">Architect</p>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="./w3images/team4.jpg" alt="Dan" style="width:100%">
+      <h3>Dan Star</h3>
+      <p class="w3-opacity">Architect</p>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+    </div>
+  </div>
+
+  <!-- Contact Section -->
+  <div class="w3-container w3-padding-32" id="contact">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
+    <p>Lets get in touch and talk about your next project.</p>
+    <div class="w3-col 26 m6 w3-margin-bottom">
+      <form action="/action_page.php" target="_blank">
+        <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
+        <button class="w3-button w3-black w3-section" type="submit">
+          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </form>
+    </div>
+    <div class="w3-col 26 m6 w3-margin-bottom" style="display: flex; justify-content: center;">
+      <div class="mangomap-popover-parent-container" style="position: relative;"><a href="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500"><div fall-back style="background-image: url(//mangomap.com/assets/icons/preview-not-ready.png); height: 360px; width: 472px; background-repeat: no-repeat; display: table-cell; vertical-align: middle; background-position: center;"><img src="//mangomap.com/images/thumnails/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d_big.png" class="anchor-image" alt="" style="display: block; margin: auto;"></div></a><script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1" ></script></div>
+    </div>
+  </div>
 
 </div> <!-- end page content -->
 
@@ -91,35 +199,44 @@
 
 <!-- Leaflet Initialization Script -->
 <script>
-  // 1) Initialize map centered on California
   const map = L.map('map').setView([37.5, -119.5], 6);
-
-  // 2) Add OpenStreetMap tile layer
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; OpenStreetMap contributors'
   }).addTo(map);
 
-  // 3) Load KML borders (adjust path)
+  const markers = L.markerClusterGroup();
+
   omnivore.kml('/borders.kml')
     .on('ready', function() {
       this.addTo(map);
       map.fitBounds(this.getBounds());
     });
 
-  // 4) Load CSV points and add markers
   fetch('/points.csv')
     .then(res => res.text())
     .then(text => Papa.parse(text, { header: true }).data)
     .then(rows => {
       rows.forEach(row => {
         if (!row.LAT || !row.LON) return;
-        const marker = L.marker([+row.LAT, +row.LON]).addTo(map)
-          .bindPopup(row['Organization Name_CLEAN']);
+        const name = row['Organization Name_CLEAN'];
+        const coord = [+row.LAT, +row.LON];
+        const marker = L.marker(coord, { title: name });
+        marker.bindPopup(name);
         marker.on('click', () => {
-          document.getElementById('sidebar').innerHTML = 
-            `<h4>${row['Organization Name_CLEAN']}</h4><p>${row.Address}</p>`;
+          document.getElementById('sidebar').innerHTML = `<h4>${name}</h4><p>${row.Address}</p>`;
         });
+        markers.addLayer(marker);
       });
+      map.addLayer(markers);
+
+      const searchControl = new L.Control.Search({
+        layer: markers,
+        propertyName: 'title',
+        initial: false,
+        zoom: 12,
+        marker: false
+      });
+      map.addControl(searchControl);
     })
     .catch(console.error);
 </script>
