feat: Add modularization

--- a/index.html
+++ b/index.html
@@ -304,7 +304,11 @@
   <script src="https://unpkg.com/leaflet-omnivore@0.3.4/leaflet-omnivore.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <!-- <script src="https://unpkg.com/@maptiler/geocoding-control@1.0.2/dist/leaflet.js"></script> -->
-  <script src="map.js"></script>
+  <!-- <script src="map.js"></script> -->
+  <script src="js/makePinIcon.js"></script>
+  <script src="js/loadCounty.js"></script>
+  <script src="js/searchLogic.js"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
