--- a/index.html
+++ b/index.html
@@ -305,9 +305,10 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <!-- <script src="https://unpkg.com/@maptiler/geocoding-control@1.0.2/dist/leaflet.js"></script> -->
   <!-- <script src="map.js"></script> -->
-  <script src="js/makePinIcon.js"></script>
+  <!-- <script src="js/makePinIcon.js"></script>
   <script src="js/loadCounty.js"></script>
-  <script src="js/searchLogic.js"></script>
+  <script src="js/searchLogic.js"></script> -->
+  <script src="js/mapFunctions.js"></script>
   <script src="js/map.js"></script>
 </body>
 
