misc: Online test

--- a/index.html
+++ b/index.html
@@ -308,9 +308,11 @@
   <!-- <script src="js/makePinIcon.js"></script>
   <script src="js/loadCounty.js"></script>
   <script src="js/searchLogic.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/mapFunctions.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/mapFunctions.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/miniMapFunctions.js"></script> -->
-  <script src="map.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/map.js"></script> -->
+  <!-- <!-- <script src="js/miniMap.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/map.js"></script> 
 </body>
 
 </html>
